--- a/改进思路.md
+++ b/改进思路.md
@@ -39,32 +39,9 @@
 
 单线程Server(v2_0)的主要代码可见v2_0 分支，接下来的 Server(v2_1)主要基于v2_0修改，v2_0已经是一个很基础的单线程http server了。
 
-在version 2_1，本人已经按照muduo的框架搭建了一个Http server, 其代码可见 vmuduo分支
-
-### vmuduo
-
-理解下面代码就能明白 “转交” 工作是如何进行的，即如何将单线程server变为多线程，
-
-queueInLoop 能实现异步唤醒，且下面的pendingFunctors_实际上充当了 临界区 的作用，保证了主线程可以和其他线程保持同步，从而把主线程Accept 的 Client转交给其他线程负责
-
-``````cpp
-void EventLoop::queueInLoop(const Functor &cb)
-{
-    {
-        std::lock_guard<std::mutex> lock(mutex_);
-        pendingFunctors_.push_back(cb);
-    }
-
-    if (!isInLoopThread() || callingPendingFunctors_)
-    {
-        wakeup();
-    }
-}
-``````
 
 
-
-### version 2_1
+### version 2_1 (单线程)
 
 在版本v2_0中，代码太过于集中，不利于维护和修改，因此才有了版本v2_1
 
@@ -73,6 +50,21 @@ v2_0主要的功能是Epoll监听活动事件，Acceptor接受新的连接，新
 所以V2_1 打算新建一个Epoll类用于 IO复用，一个Acceptor用于建立新连接，TcpConnection用于管理接收到的连接，同时建立一个TcpServer，用于管理Acceptor和TcpConnection
 
 对于每一个文件描述符，这里按照muduo的思路，新建了一个Channel类来管理 IO事件，然后用一个loop对象来管理整个程序
+
+``````cpp
+// loop对象的主要代码   
+while (!quit_)
+    {
+        activeChannels_.clear();
+        pollReturnTime_ = poller_->poll(kPollTimeMs, &activeChannels_);
+        for (auto it = activeChannels_.begin(); it != activeChannels_.end(); ++it)
+        {
+            (*it)->handleEvent(pollReturnTime_);
+        }
+    	//  在单线程server中, 直接用上面的handleEvent 是不能处理所有的任务回调的， 比如无法处理 Channel的析构，所以析构要在下面的doPendingFunctors中处理
+        doPendingFunctors();
+    }
+``````
 
 
 
